istio/templates/workloadentry.yaml
# Sidecar Template - Workload Configuration
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: workload-sidecar
  namespace: default
spec:
  workloadSelector:
    labels:
      app: example-app
  ingress:
  - port:
      number: 8080
      protocol: HTTP
      name: http
    defaultEndpoint: 127.0.0.1:8080
    captureMode: IPTABLES
  - port:
      number: 9090
      protocol: GRPC
      name: grpc
    defaultEndpoint: 127.0.0.1:9090
  egress:
  - port:
      number: 80
      protocol: HTTP
      name: http
    hosts:
    - "./*"
    - "istio-system/*"
  - port:
      number: 443
      protocol: HTTPS
      name: https
    hosts:
    - "external.com"
    - "api.external.com"
  - port:
      number: 3306
      protocol: TCP
      name: mysql
    hosts:
    - "./database-service"
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
---
# Sidecar Template - Namespace-wide Configuration
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: namespace-sidecar
  namespace: production
spec:
  egress:
  - hosts:
    - "./*"
    - "istio-system/*"
    - "kube-system/kube-dns"
  - port:
      number: 443
      protocol: HTTPS
      name: external-https
    hosts:
    - "external-apis.com"
    - "monitoring.company.com"
  outboundTrafficPolicy:
    mode: ALLOW_ANY
